--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
-    "@react-three/drei": "^9.99.1",
-    "@react-three/fiber": "^8.15.16",
+    "@react-three/drei": "^9.103.0",
+    "@react-three/fiber": "^8.16.1",
+    "@types/three": "^0.163.0",
     "framer-motion": "^11.0.6",
     "maath": "^0.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.163.0",
+    "three-stdlib": "^2.29.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -32,6 +35,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
+    "vite": "^5.2.7"
   }
 }
